--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "dependencies": {
     "discord.js": "^12.5.1",
     "electron-squirrel-startup": "^1.0.0",
-    "johnny-five": "^2.0.0",
     "node-abi": "^2.20.0",
     "robotjs": "^0.6.0",
-    "serialport": "^9.0.7",
     "update": "^0.7.4"
   },
   "devDependencies": {
@@ -18,8 +16,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.0",
-    "electron-rebuild": "^2.3.5"
+    "electron": "^12.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
